# termirator

./: .gitignore  Cargo.toml  Dockerfile  MAN.md  README.md  index.html  termirator.service  termirator.sh
backends/node/: package.json  server.js
css/: style.css
js/: powers.js  terminal.js
src/: main.rs
